--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "express-sesssion": "^1.15.5",
     "method-override": "^3.0.0",
     "mongoose": "^5.3.4"
